min width for login page fixed - not responsive

--- a/style.css
+++ b/style.css
@@ -37,3 +37,6 @@ body,html{
     background-size: cover;
     background-repeat: repeat;
 }
+.min-width-box{
+    min-width: 425.4px;
+}
